--- a/maggio.html
+++ b/maggio.html
@@ -18,8 +18,8 @@
 <h1><img src="img/logo sito.jpg" width="150" height="100">CELEBRI VIGNOLESI</h1>
 <nav>
 <ul>
-<strong><li><a href="homepage.html">HOME</a></li>
-<li><a href="Chi siamo.html">CHI SIAMO?</a></li>
+<strong><li><a href="index.html">HOME</a></li>
+<li><a href="Chi siamo.html">CHI SIAMO</a></li>
 <li><a href="Novità.html">NOVITÀ</a></li>
 <li><a href="Celebri Vignolesi.html">CELEBRI VIGNOLESI</a></li>
 <li class="active"><a href="Anniversari.html">ANNIVERSARI</a></li>
@@ -32,11 +32,11 @@
 <h3><big><strong>MAGGIO</strong></big></h3><br><br><br>
 <p><big><strong>6 maggio 1807</strong>: nacque a Vignola <strong>CARLO GARAVINI</strong>, diplomatico, viaggiatore, avventuriero, commerciante, geografo e armatore.<br><br> 
 
-Lontano parente di <strong>Francesco Selmi</strong> (1817-1881), Carlo Garavini trascorse l’infanzia a Vignola e lasciò ben presto l’Emilia per esercitare il commercio in alcuni Paesi del Mediterraneo. Imparato l’arabo e diversi dialetti locali, ebbe significative esperienze nei campi del commercio e della diplomazia internazionali (in Algeria, fra l’altro, fu incaricato d’affari dell’emiro e console degli Stati Uniti d’America), e inoltre compì esplorazioni che gli consentirono non solo di venire a conoscenza di usi e costumi di varie popolazioni dell’Africa settentrionale e del Vicino Oriente, ma anche di rettificare alcuni errori commessi dai geografi e di spedire ad alcuni musei un certo numero di reperti e di crani beduini.<br>
+Lontano parente di <strong>Francesco Selmi</strong> (1817-1881), Carlo Garavini trascorse l’infanzia a Vignola, ma lasciò ben presto il paese natale per esercitare il commercio in alcuni Paesi del Mediterraneo. Imparato l’arabo e diversi dialetti locali, ebbe significative esperienze nel campo della diplomazia internazionale (in Algeria, fra l’altro, fu incaricato d’affari dell’emiro e console degli Stati Uniti d’America) e compì esplorazioni che gli consentirono non solo di venire a conoscenza di usi e costumi di varie popolazioni dell’Africa settentrionale e del Vicino Oriente, ma anche di inviare ad alcuni musei crani beduini e vari reperti, e di rettificare alcuni errori commessi dai geografi.<br>
 
-In età matura, il nostro personaggio fu socio a Napoli di un caffè alla moda e proprietario dei vaporetti che collegavano la città e Ischia. All’epoca, egli risiedeva su quell’isola, e precisamente nella magnifica villa che assunse il suo cognome e che ora è maggiormente nota come Palazzo D’Ambra.<br> 
+In età matura, il nostro personaggio – fra l’altro – fu per qualche tempo proprietario vaporetti che collegavano Napoli e Ischia. All’epoca, egli risiedeva su quell’isola, e precisamente nella magnifica villa che assunse il suo cognome e che ora è maggiormente nota come Palazzo D’Ambra.<br> 
 
-Nel 1867 Garavini, appassionato d’arte, riuscì a rintracciare e ad acquistare il disperso <i>Autoritratto</i> di <strong>Giuseppe Maria Soli</strong> (1745-1822), e lo fece giungere alla sorella Luigia (1796-1870), appena rimasta vedova di Giambattista Bellucci (1781-1866), uno degli uomini più stimati e ricchi della Vignola ottocentesca.<br>
+Nel 1867 Garavini, appassionato d’arte, riuscì a rintracciare e ad acquistare il disperso <i>Autoritratto</i> di <strong>Giuseppe Maria Soli</strong> (1747-1822), e lo fece giungere alla sorella Luigia (1796-1870), appena rimasta vedova di Giambattista Bellucci (1781-1866), uno degli uomini più stimati e ricchi della Vignola ottocentesca.<br>
 
 Non conosciamo né la data né il luogo della scomparsa di Garavini, ma sicuramente non è anteriore al 1874.<br><br> 
 
@@ -47,8 +47,7 @@ Nell’immagine qui sotto, una foto recente del Palazzo D’Ambra (già Villa Ga
 <p class="index-p3"><strong>8 maggio 1775</strong>: morì a Vignola <strong>GIUSEPPE ANTONIO PLESSI</strong>, medico, erudito, poeta e amministratore locale.<br><br>
 Giuseppe Antonio Plessi nacque a Vignola il 23 luglio 1710 e si distinse soprattutto come medico e studioso di medicina, ma fu anche abbastanza conosciuto per i suoi versi e le sue ricerche erudite. Fece parte di diverse Accademie italiane e intrattenne rapporti con importanti letterati e scienziati. Fu a lungo sindaco del paese natale.<br><br>
 Nell’immagine qui sotto, frontespizio di <i>Consulti medici. Con l’aggiunta di alcune lettere del dottor Morando Morando</i> [in realtà: <i>Morando Morandi</i>] […], In Venezia, Presso Giambatista Pasquali, 1759. L’opera contiene una dedicatoria in versi, dal titolo <i>A Sua Eccellenza il signor don Antonio Boncompagni Ludovisi</i> […], scritta da Giuseppe Antonio Plessi e collocata alle pp. 3-8 (si segnala che, alle pp. 7-8, alcuni versi e una nota a piè di pagina sono dedicati a Vignola e, soprattutto, ai suoi illustri figli <strong>Giacomo Barozzi</strong> [1507-1573] e <strong>Lodovico Antonio Muratori</strong> [1672-1750]). Fonte: google.com</p><br><br>
-<center>
-<img src="img/Frontespizio.jpg" width="430" height="650"></center><br><br>
+<center><img src="img/Frontespizio.jpg" width="430" height="650"></center><br><br>
 <p><strong><big><center>Vuoi saperne di più su Giuseppe Antonio Plessi?<br>Allora, visita il suo <a href="Plessi Giuseppe Antonio.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</center></big></strong></p><br><br><br>
 
 <p class="index-p3"><strong>15 maggio 1448</strong> (calendario giuliano): <strong>UGUCCIONE I CONTRARI</strong>, militare e politico, morì a Ferrara. Aveva 69 anni.<br><br>
