--- a/Novità.html
+++ b/Novità.html
@@ -30,7 +30,7 @@
 	
 	<p><big><big><span style="text-decoration: underline;">04 febbraio 2022</span></big></big></p><br><br>
 <p><big>L’ingresso al centro storico di Vignola dal Portello in un’acquaforte di Rino Zapparoli dal titolo <i>Il borgo</i>. Si tratta della prima di cinque acqueforti (intitolate complessivamente <i>Cinque vedute di Vignola</i>) che l’Artista realizzò nel 2008.</big></p><br>
-<img src="img/FOTO VARIE/zapparoli.jpg" width="600" height="750"><br><br><br>
+<img src="img/FOTO VARIE/zapparoli.jpg" width="600" height="750"><br><br><br><br><br>
 	
 <p><big><big><span style="text-decoration: underline;">31 gennaio 2022</span></big></big></p><br><br>
 <p><big>Ritratto di fantasia di Lodovico Antonio Muratori, litografia di Domenico Simonini (2021). L'opera è stata eseguita per l'associazione Amici dell'Arte Vignola.</big></p><br>
