--- a/giugno.html
+++ b/giugno.html
@@ -49,13 +49,18 @@ Nell’immagine sottostante, Casimiro Bettelli nella prima maturità. Fonte: <st
 <img src="img/celebri vignolesi/Bettelli/giovane.jpg" width="470" height="700"><br><br>
 <p><strong><big><center>Vuoi saperne di più su Casimiro Bettelli?<br>Allora, visita il suo <a href="Bettelli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br>
 
-<p><big><strong>20 ottobre 1822</strong>: morì a Modena <strong>GIUSEPPE MARIA SOLI</strong>, architetto, ingegnere, pittore e insegnante. Venne sepolto nel cimitero di Vignola (quello che precedeva il camposanto ora in uso).<br><br>
+<p class="index-p3"><strong>23 giugno 1745</strong>: nacque a Vignola <strong>GIUSEPPE MARIA SOLI</strong>, architetto, ingegnere, pittore e insegnante.<br><br>  
 
-Nato a Vignola il 23 giugno 1745 in una famiglia di agricoltori, Giuseppe Maria Soli si guadagnò una grande fama specialmente in campo architettonico, ma fu anche pittore distinto e maestro di intere generazioni di artisti a Modena. Attivo in alcune città italiane e in diversi centri minori, nel paese natale egli concepì l’elegante Casino – o Villa – Bellucci (poi, Tosi Bellucci), ora Residenza Municipale; anche se il progetto data 1789, i lavori vennero iniziati molto probabilmente solo nel 1815 e furono conclusi tra il 1823 e il 1824. Alle decorazioni parietali dell’edificio provvide in massima parte il conterraneo <strong>Pietro Minghelli</strong> (1780-1822), già suo allievo all’Accademia di Belle Arti di Modena, istituto presso il quale Soli fu a lungo non solo docente di Architettura Civile, Disegno e Pittura, ma anche direttore. Dal 1867 è conservato in questo casino l’<i>Autoritratto</i> che l’artista dipinse non prima del 1805.<br> 
+Di umili origini, Giuseppe Maria Soli mostrò già da bambino un eccezionale talento nel disegno. Grazie a mecenati e sostegni di varia natura, ricevette una lunga e approfondita formazione artistica dapprima a Bologna e poi a Roma.<br> 
 
-Poco prima di morire, stese un progetto per ingrandire la chiesa parrocchiale di Vignola.<br><br>
-Nell’immagine sottostante, una fotografia recente del vignolese Casino Tosi Bellucci, edificio progettato da Giuseppe Maria Soli.</big></p><br><br>
-<img src="img/FOTO VARIE/Casino Tosi Bellucci.jpg"><br><br><br>
+Stimatissimo dagli Este e dagli Austria-Este come da Napoleone, Soli ebbe una carriera lunga e fortunata che lo vide divenire uno dei più importanti architetti neoclassici italiani e un apprezzato pittore attivo in diversi centri della Penisola.<br>  
+
+Nella natia Vignola, il nostro artista concepì l’elegante Casino – o Villa – Bellucci (poi, Tosi Bellucci), ora Residenza Municipale; anche se il progetto datava 1789, i lavori vennero iniziati molto probabilmente solo nel 1815 e furono conclusi tra il 1823 e il 1824. Alle decorazioni parietali dell’edificio provvide in massima parte il conterraneo <strong>Pietro Minghelli</strong> (1780-1822), già suo allievo all’Accademia di Belle Arti di Modena, istituto presso il quale Soli fu a lungo non solo direttore, ma anche docente di Architettura Civile, Disegno e Pittura. Dal 1867 è conservato in questo casino l’Autoritratto che Soli dipinse non prima del 1805.<br>  
+
+L’anno dopo avere elaborato un progetto per l’ingrandimento della chiesa parrocchiale di Vignola, Soli morì a Modena il 20 ottobre 1822 e venne inumato nel cimitero del paese natale (quello che precedeva il camposanto ora in uso).<br><br> 
+
+Nell’immagine sottostante, l’<i>Autoritratto</i> di Giuseppe Maria Soli (il quadro ha subìto un restauro conservativo nel 2015).</p><br><br>
+<img src="img/celebri vignolesi/Soli Giuseppe Maria/Autoritratto.jpg" width="500" height="670"><br><br><br>
 <p><strong><big><center>Vuoi saperne di più su Giuseppe Maria Soli?<br>Allora, visita il suo <a href="Soli Giuseppe Maria.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
 
 <p class="index-p3"><strong>25 giugno 1959</strong>: morì a Vignola <strong>UGO ROLI</strong>, educatore, scrittore, poeta, studioso di storia (anche locale), avvocato, funzionario pubblico ed enigmografo.<br><br>
