--- a/Soli1.html
+++ b/Soli1.html
@@ -68,15 +68,15 @@ Rimasto da vedovo da poco più di sei mesi, Soli morì nella capitale austroeste
 
 L’odonomastica di Vignola non trascura questo suo figlio illustre: a lui, infatti, risulta dedicata un’importante strada del centro storico della città (in precedenza, era stata nota prima come Via dei Beccari o Via dei Macelli, poi come Via del Sole), lungo la quale fino alle soglie del XX secolo si svolgeva il mercato settimanale degli animali da cortile.<br>  
 
-Un <i>Autoritratto</i> di Soli, dipinto non prima del 1805 e andato disperso poco dopo, fu rintracciato nel 1867 da <strong>Carlo Garavini</strong> (1807 - non prima del 1874), che allora risiedeva in Campania, e immediatamente inviato in dono alla sorella Luigia (1796-1870), vedova di uno degli uomini più ricchi ed eminenti della Vignola ottocentesca, Giambattista Bellucci (1781-1866). Da allora, il quadro si trova nel già menzionato Casino (o Villa) Tosi Bellucci (in precedenza, Tosi) della cittadina modenese. L’opera ha subìto un restauro conservativo nel 2015.</big></p><br><br><br>
+Un <i>Autoritratto</i> di Soli, dipinto nel 1805 (o negli immediatamente anni successivi) e andato ben presto disperso, fu rintracciato nel 1867 da <strong>Carlo Garavini</strong> (1807 - non prima del 1874), che allora risiedeva in Campania, e subito inviato in dono alla sorella Luigia (1796-1870), vedova di uno degli uomini più ricchi ed eminenti della Vignola ottocentesca, Giambattista Bellucci (1781-1866). Da allora, il quadro si trova nel già menzionato Casino (o Villa) Tosi Bellucci (in precedenza, Tosi) della cittadina modenese. L’opera ha subìto un restauro conservativo nel 2015.</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br><br>
-<p><center><big><big><i>Autoritratto</i> di Soli, risalente a non prima del 1805 e conservato nella Villa Tosi Bellucci, oggi Residenza Municipale di Vignola. Fonte: google.com</big></big></center><br>
-	<img src="img/celebri vignolesi/Soli Giuseppe Maria/Autoritratto.jpg" width="480" height="650"><br><br><br>
-	<p><center><big><big>Porta Sant’Agostino a Modena, progettata da Soli e costruita fra il 1789 e il 1791; fu demolita nel 1912.<br> Quest’incisione (a bulino su rame) è di Guglielmo Silvester (1763-1839) e risale probabilmente al 1791.</big></big></center><br>
-	<img src="img/FOTO VARIE/porta.jpg" width="700" height="500"><br><br><br>
-<p><big><big><center>Villa Tosi Bellucci (già Bellucci), edificio progettato da Soli nel 1789 per conto della ricca famiglia Bellucci.<br> I lavori, tuttavia, vennero iniziati molto probabilmente solo nel 1815 e conclusi tra il 1823 e il 1824.</center></big></big></p>
+	<p><center><big><big>L’<i>Autoritratto</i> di Soli attualmente conservato nel Casino Tosi Bellucci (già Bellucci), dal 1916 Residenza Municipale di Vignola. Fonte: google.com</big></big></center><br>
+	<img src="img/celebri vignolesi/Soli Giuseppe Maria/Autoritratto.jpg" width="450" height="620"><br><br><br>
+	<p><center><big><big>L’antica Porta Sant’Agostino di Modena nell’incisione (a bulino su rame) che Guglielmo Silvester (1763-1839) realizzò probabilmente nel 1791.</big></big></center><br>
+	<img src="img/FOTO VARIE/porta.jpg" width="650" height="450"><br><br><br>
+<p><big><big><center>Un’immagine recente del Casino Tosi Bellucci (già Bellucci) a Vignola.</center></big></big></p>
 <img src="img/FOTO VARIE/Casino Tosi Bellucci.jpg"><br><br><br>
-<p><center><big><big>Nell’immagine sottostante, la facciata delle Procuratie Nuovissime verso Piazza San Marco. Fonte: google.com</big></big></center><br>
+<p><center><big><big>Un’immagine recente della facciata verso Piazza San Marco delle Procuratie Nuovissime di Venezia. Fonte: google.com</big></big></center><br>
 	<img src="img/FOTO VARIE/procuratie.jpg"><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
