--- a/Soli1.html
+++ b/Soli1.html
@@ -71,7 +71,7 @@ Un <i>Autoritratto</i> di Soli, dipinto nel 1805 (o negli anni immediatamente su
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br><br>
 	<p><center><big><big>L’<i>Autoritratto</i> di Soli attualmente conservato nel Casino Tosi Bellucci (già Bellucci),<br> dal 1916 Residenza Municipale di Vignola. Fonte: google.com</big></big></center><br>
 	<img src="img/celebri vignolesi/Soli Giuseppe Maria/Autoritratto.jpg" width="450" height="620"><br><br><br>
-	<p><center><big><big>L’antica Porta Sant’Agostino di Modena nell’incisione (a bulino su rame)<br> che Guglielmo Silvester (1763-1839) realizzò probabilmente nel 1791. Fonte: google.com</big></big></center><br>
+	<p><center><big><big>L’antica Porta Sant’Agostino di Modena nell’incisione (a bulino su rame) che<br> Guglielmo Silvester (1763-1839) realizzò probabilmente nel 1791. Fonte: google.com</big></big></center><br>
 	<img src="img/FOTO VARIE/porta.jpg" width="650" height="450"><br><br><br>
 <p><big><big><center>Un’immagine recente del Casino Tosi Bellucci (già Bellucci) a Vignola.</center></big></big></p>
 <img src="img/FOTO VARIE/Casino Tosi Bellucci.jpg"><br><br><br>
