--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -30,11 +30,11 @@
 <section><br><br><br>
   <h2><strong><big>IL FAVOLEGGIATORE</big></strong></h2><br><br>
   <center>
-  	<p><big>Nel febbraio 2022, è cominciata la trascrizione delle favole che compongono il <i><strong>Il Favoleggiatore</strong></i> (dati completi di questo volumetto selmiano: <i>Il Favoleggiatore ossia raccolta di favole in lingua volgare scelte, emendate e purgate non che opportunamente annotate</i> ad usum serenissimi saeculi XIX <i>dal M. di S.</i>, Torino, Tip. di G.B. Paravia e Comp., 1857).<br> Nel passaggio dal testo a stampa al testo trascritto, per quanto riguarda gli aspetti grafici, abbiamo sistematicamente cancellato il punto fermo dopo il titolo di ogni favola e normalizzato all’uso odierno gli accenti; le rare modifiche di altra natura sono state indicate caso per caso.</big></p><br><br>
+  	<p><big>Nel febbraio 2022, è cominciata la trascrizione delle favole che compongono <i><strong>Il Favoleggiatore</strong></i> (dati completi di questo volumetto selmiano: <i>Il Favoleggiatore ossia raccolta di favole in lingua volgare scelte, emendate e purgate non che opportunamente annotate</i> ad usum serenissimi saeculi XIX <i>dal M. di S.</i>, Torino, Tip. di G.B. Paravia e Comp., 1857).<br> Nel passaggio dal testo a stampa al testo trascritto, per quanto riguarda gli aspetti grafici, abbiamo sistematicamente cancellato il punto fermo dopo il titolo di ogni favola e normalizzato all’uso odierno gli accenti; le rare modifiche di altra natura sono state indicate caso per caso.</big></p><br><br>
 
 <table class="table-2">
  <tr>
-<td><big><big><strong><a href="usignolo.html">1. L'usignuolo</a></strong></big></big></td>
+<td><big><big><strong><a href="usignolo.html">1. L’usignuolo</a></strong></big></big></td>
 <td><big><big><strong><a href="nuviletto.html">2. Il nuviletto e la luna</a></strong></td></tr>
 
 <tr>
@@ -47,7 +47,7 @@
 
 <tr>
 <td><big><big><strong><a href="tempo.html">7. Modo diverso di apprezzare il tempo</a></strong></td>
-<td><big><big><strong><a href="asino.html">8. Il contadino che ama l'asino</a></strong></td></tr>
+<td><big><big><strong><a href="asino.html">8. Il contadino che ama l’asino</a></strong></td></tr>
 
 <tr>
 <td><big><big><strong><a href="rosa.html">9. La rosa delle alpi</a></strong></td>
@@ -58,7 +58,7 @@
 <td><big><big><strong><a href="fioretto.html">12. Il fioretto dei campi</a></strong></td></tr>
 
 <tr>
-<td><big><big><strong><a href="aquila.html">13. L'aquila, l'avoltoio e la civetta</i></a></strong></td>
+<td><big><big><strong><a href="aquila.html">13. L’aquila, l’avoltoio e la civetta</i></a></strong></td>
 <td><big><big><strong><a href="cavaliere.html">14. Un nuovo cavaliere errante</a></strong></td></tr>
 
 <tr>
@@ -83,7 +83,7 @@
 
 <tr>
 <td><big><big><strong><a href="camelia.html">25. La camelia</a></strong></td>
-<td><big><big><strong><a href="astronomo.html">26. L'astronomo ed il sole</a></strong></td></tr>
+<td><big><big><strong><a href="astronomo.html">26. L’astronomo ed il sole</a></strong></td></tr>
 
 <tr>
 <td><big><big><strong><a href="ovifuoco.html">27. I due ovi al fuoco</a></strong></td>
@@ -91,7 +91,7 @@
 
 <tr>
 <td><big><big><strong><a href="tortora.html">29. Storia della tortora</a></strong></td>
-<td><big><big><strong><a href="acqua.html">30. L'acqua, l'aria ed il fuoco</a></strong></td></tr>
+<td><big><big><strong><a href="acqua.html">30. L’acqua, l'aria ed il fuoco</a></strong></td></tr>
 
 <tr>
 <td><big><big><strong><a href="rigogolo.html">31. Il rigogolo e lo stagno</a></strong></td>
@@ -99,17 +99,17 @@
 
 <tr>
 <td><big><big><strong><a href="morente.html">33. La morente</a></strong></td>
-<td><big><big><strong><a href="aquila.html">34. L'acquila e la gazza</a></strong></td></tr>
+<td><big><big><strong><a href="aquila.html">34. L’acquila e la gazza</a></strong></td></tr>
 <tr>
 <td><big><big><strong><a href="luce.html">35. La luce elettrica</a></strong></td>
 <td><big><big><strong><a href="fanciullo.html">36. Il fanciullo e la candela stearica</a></strong></td></tr>
 
 <tr>
 <td><big><big><strong><a href="cerfoglio.html">37. Il prato di cerfoglio</a></strong></td>
-<td><big><big><strong><a href="serpe.html">38. L'acquila e la serpe</a></strong></td></tr>
+<td><big><big><strong><a href="serpe.html">38. L’acquila e la serpe</a></strong></td></tr>
 
 <tr>
-<td><big><big><strong><a href="uovo.html">39. L'uovo prodigioso</a></strong></td>
+<td><big><big><strong><a href="uovo.html">39. L’uovo prodigioso</a></strong></td>
 <td><big><big><strong><a href="solazzo.html">40. Solazzo</a></strong></td></tr>
 
 <tr>
