--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -91,7 +91,7 @@
 
 <tr>
 <td><big><big><strong><a href="tortora.html">29. Storia della tortora</a></strong></td>
-<td><big><big><strong><a href="acqua.html">30. L’acqua, l'aria ed il fuoco</a></strong></td></tr>
+<td><big><big><strong><a href="acqua.html">30. L’acqua, l’aria ed il fuoco</a></strong></td></tr>
 
 <tr>
 <td><big><big><strong><a href="rigogolo.html">31. Il rigogolo e lo stagno</a></strong></td>
