--- a/Novità.html
+++ b/Novità.html
@@ -28,6 +28,23 @@
 <section><br><br>
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
 	
+<p><big><big><span style="text-decoration: underline;">09 febbraio 2022</span></big></big></p><br><br>
+<p><big>FRANCESCO SELMI (1817-1881) si cimentò con impegno in diversi settori. Egli stese anche numerosi romanzi, racconti e favole, la maggior parte dei quali risultano tuttora inediti. Nel licenziare per la stampa alcuni dei suoi testi narrativi, egli preferì celarsi dietro pseudonimo: ad esempio, questo è il caso della raccolta <i>I primi racconti scritti da un Maestruccio di Scuola</i> (1847), uscita in seconda edizione corretta e accresciuta con il titolo di <i>Racconti morali scritti da un Maestruccio di Scuola per lettura dei giovanetti italiani</i> (1853), ma è pure il caso di <i>Il Favoleggiatore</i> (1857), raccolta di favole firmata «M. di S.»; inoltre, l’Autore pubblicò il romanzo <i>Battista Cannatelli</i> (1866) sotto il nome di «Italo De’ Vecchi».<br>
+Presentiamo qui la trascrizione della prima favola contenuta in <i>Il Favoleggiatore (dati completi di questo volumetto selmiano: Il Favoleggiatore ossia raccolta di favole in lingua volgare scelte, emendate e purgate non che opportunamente annotate</i> ad usum serenissimi saeculi XIX dal M. di S., Torino, Tip. di G.B. Paravia e Comp., 1857). Via via, con cadenza grosso modo bimestrale, pubblicheremo la trascrizione di tutte le restanti 43 favole dell’opera. Nel passaggio dal testo a stampa al testo trascritto, per quanto riguarda gli aspetti grafici, abbiamo sistematicamente cancellato il punto fermo dopo il titolo di ogni favola e normalizzato all’uso odierno gli accenti; le rare modifiche di altra natura sono state indicate caso per caso.<br><br>
+Qui sotto, l’<i>incipit</i> della prima favola dell’opera, <i>L’usignuolo</i>:  
+
+ 
+
+«Un usignuolo era uscito in busca di cibo, lasciando la sua compagna a covare nel nido, quando tornato videsi dinnanzi un orrendo macello della sua famigliuola. La sposa uccisa, gli uovicini nati testé e frutti del primo amore, rotti, succhiati; opera sanguinosa di una serpe nemica, che da lungo tempo strisciava al piede dell’albero, e più volte erasi provata a salirlo per consumarvi il misfatto.<br>
+
+Rimase tale dal fortissimo dolore, che non poté più muoversi di là; e si posò poco stante sopra un ramicello senza guaire, muto, intirizzito, in sembianza più di morto che di vivo.<br>  
+
+Stette fermo a lungo tempo inconsapevole di se medesimo; ma in sulla sera in tramontar del sole fu tocco, tra fronda e fronda, da un languido raggio dell’astro prossimo all’orizzonte; e come sveglio da quella luce temperata, si scosse e intuonò un suo canto, che parve a salutarla. Non canto lamentoso, non querulo, non lugubre; anzi un vivacissimo trillare, uno splendido gorgheggio, con frammezzo una sequenza animosa di melodie soavi, delicate, esprimenti i teneri affetti di un cuore dolcemente commosso. Così egli soleva, nei primi giorni di primavera, chiamare ai casti baci la sua diletta quando se ne innamorò; e in modo somigliante fece gioiosamente tremolare l’aura notturna quando il nido fu costrutto e vi fu deposto il primo uovo».<br><br>
+CONTINUA <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">QUI</a><br><br> 
+
+Nell’immagine, la prima di copertina di uno dei pochissimi esemplari ancora disponibili di Il Favoleggiatore, quello conservato presso la Biblioteca Comunale “Francesco Selmi” di Vignola.</big></p><br>
+<img src="img/FOTO VARIE/copertina.jpg" width="550" height="750">	
+	
 	<p><big><big><span style="text-decoration: underline;">04 febbraio 2022</span></big></big></p><br><br>
 <p><big>L’ingresso al centro storico di Vignola dal Portello in un’acquaforte di Rino Zapparoli dal titolo <i>Il borgo</i>. Si tratta della prima di cinque acqueforti (intitolate complessivamente <i>Cinque vedute di Vignola</i>) che l’Artista realizzò nel 2008.</big></p><br>
 <img src="img/FOTO VARIE/zapparoli.jpg" width="600" height="750"><br><br><br><br><br>
