--- a/giugno.html
+++ b/giugno.html
@@ -37,7 +37,7 @@ I due principali promotori della costituzione della Biblioteca Comunale di Vigno
 Nell’immagine sottostante, lapide in ricordo di don Giovanni Rodolfi, a lungo affissa nella Biblioteca Comunale di Vignola e attualmente collocata nella Villa Tosi Bellucci (dal 1916, sede del Municipio di Vignola).</p><br><br>
 <img src="img/celebri vignolesi/Rodolfi Giovanni/lapide.jpg" width="350" height="650"><br><br><br><br><br>
 
-<p class="index-p3"><strong>12 giugno 1924</strong>: nacque a Campiglio di Vignola <strong>CASIMIRO BETTELLI</strong>, sacerdote, insegnante, poeta, scrittore, giornalista e collezionista d’arte.<br><br> 
+<p class="index-p3"><strong>12 giugno 1924</strong>: nacque a Campiglio di Vignola <strong>CASIMIRO BETTELLI</strong>, sacerdote, insegnante, poeta, scrittore, saggista, giornalista e collezionista d’arte.<br><br> 
 
 Dopo avere studiato presso i Seminari di Fiumalbo e di Modena ed essere stato ordinato sacerdote, Casimiro Bettelli (detto confidenzialmente <i>don Miro</i>) fu cappellano prima a San Vito di Spilamberto, in seguito a Fanano e infine a Guiglia. Nel 1959 si trasferì a Modena, dove passò il resto della vita. Nominato assistente all’Istituto “Filippo Neri”, diventò rettore di Santa Maria della Pomposa, la stessa chiesa che aveva visto dal 1716 al 1733 come suo proposto <strong>Lodovico Antonio Muratori</strong> (1672-1750) e che da quasi un secolo ne accoglie i resti mortali. Nella stessa città, il nostro personaggio insegnò a lungo Religione all’Istituto Tecnico Commerciale “Jacopo Barozzi”.<br>  
 Autore di molte pubblicazioni in poesia e in prosa, il sacerdote vignolese conobbe una certa fama pure al di fuori dell’Emilia specialmente per i suoi versi, che ricevettero anche alcuni premi nazionali.<br>
