--- a/Novità.html
+++ b/Novità.html
@@ -16,7 +16,7 @@
 <body><header>
 <h1><img src="img/logo sito.jpg" width="150" height="100">CELEBRI VIGNOLESI</h1><nav>
 <ul>
-<strong><li><a href="index.html">HOME</a></li>
+<strong><li><a href="homepage.html">HOME</a></li>
 <li><a href="Chi siamo.html">CHI SIAMO?</a></li>
 <li class="active"><a href="Novità.html">NOVITÀ</a></li>
 <li><a href="Celebri Vignolesi.html">CELEBRI VIGNOLESI</a></li>
