--- a/febbraio.html
+++ b/febbraio.html
@@ -58,8 +58,8 @@ Nell’immagine sottostante, ritratto di Giacomo Cantelli, incisione di Caterina
 
 <p><big><strong>23 febbraio 1887</strong>: nacque a Vignola <strong>UGO ROLI</strong>, educatore, scrittore, poeta, studioso di storia (anche locale), avvocato, funzionario pubblico ed enigmografo.<br><br>
 Ugo Roli iniziò la sua carriera lavorativa come maestro elementare. In seguito, svolse brillantemente la professione di avvocato. Fu anche commissario prefettizio. Si fece notare a livello nazionale come enigmografo (con lo pseudonimo di «Fiordaliso») e autore di libri scolastici per le Elementari.<br>
-Roli partecipò alla Prima Guerra Mondiale in qualità di ufficiale di Stato Maggiore e fece numerose esperienze in prima linea. Nel corso del conflitto, vergò interessanti lettere (che furono poi pubblicate nel 1933) e venne decorato, fra l’altro, con la Medaglia d’Argento al Valor Militare.<br>
-Nel 1919 figurò tra i fondatori del Circolo Amicizia di Vignola, sodalizio che trovò sede all’interno del Palazzo Contrari Boncompagni. Ne diventò il primo presidente.<br>
+Roli partecipò alla Prima Guerra Mondiale in qualità di ufficiale di Stato Maggiore e fece numerose esperienze in prima linea. Nel corso del conflitto, vergò interessanti lettere (pubblicate nel 1933) e venne decorato, fra l’altro, con la Medaglia d’Argento al Valor Militare.<br>
+Nel 1919 fu uno dei fondatori del Circolo Amicizia di Vignola, sodalizio che trovò sede all’interno del Palazzo Contrari Boncompagni. Ne diventò il primo presidente.<br>
 In vita, nel suo paese natale, Roli era apprezzato soprattutto come solerte cultore di memorie patrie, attento studioso di storia locale e provetto verseggiatore. La sua fama di valente e ingegnoso poeta dialettale resiste ancora oggi.<br>
 Roli morì a Vignola il 25 giugno 1959.<br>
 
