--- a/Cantelli.html
+++ b/Cantelli.html
@@ -47,7 +47,7 @@ Vignola ha dedicato a Cantelli una strada e un teatro. All’interno della Bibli
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><big><big><center>Caterina Piotti Pìrola (1800-1842?), ritratto di Giacomo Cantelli, incisione.<br> Fonte: <i>Iconografia dei celebri vignolesi edita per cura di Francesco Selmi</i>,<br> Modena, Presso il libraio Giuseppe Luppi, 1839. </center></big></big></p>
 <center><img src="img/celebri vignolesi/Cantelli/Incisione.jpg" width="450" height="650"></center><br><br><br>
-	<p><big><big><center>Frontespizio di un’edizione del <i>Mercurio Geografico</i>: <i>Mercvrio Geografico overo Gvida Geografica in tutte le parti del Mondo conforme le Tavole Geografiche del Sansone Bavrdrand e Cantelli</i>, In Roma, Alla Pace, All’insegna di Parigi, s.d. [ma: fine XVII secolo].</center></big></big></p>
+	<p><big><big><center>Frontespizio di un’edizione del <i>Mercurio Geografico</i>:<br> <i>Mercvrio Geografico overo Gvida Geografica in tutte le parti del Mondo conforme le Tavole Geografiche del Sansone Bavrdrand e Cantelli</i>,<br> In Roma, Alla Pace, All’insegna di Parigi, s.d. [ma: fine XVII secolo].</center></big></big></p>
 <center><img src="img/celebri vignolesi/Cantelli/Mercurio geografico.jpg" width="400" height="650"></center><br><br>
 <p><big><big><center>Cantelli, <i>Carta del Brandeburgo</i>, contenuta ​nell’opera citata sopra. Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Cantelli/Carta del Brandeburgo.jpg" width="800" height="650"></center><br><br>
