--- a/Novità.html
+++ b/Novità.html
@@ -28,6 +28,20 @@
 <section><br><br>
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
 	
+
+<p><big><big><span style="text-decoration: underline;">28 febbraio 2022</span></big></big></p><br><br>
+<p><big>Qui di seguito, presentiamo l’<i>incipit</i> di <i><strong>IL NUVILETTO E LA LUNA</strong></i>, la seconda favola di <i><strong>IL FAVOLEGGIATORE</strong></i>, raccolta pubblicata nel 1857 da <strong>FRANCESCO SELMI</strong> (1817-1881):<br>  
+«Uno snello nuviletto, in mezzo all’azzurro firmamento, in serena e fresca notte di estate, stette fermo lunga pezza a mirare l’astro gentile che lo inargentava; al quale come ad innamorata sorrideva sì amabilmente, da pensare che perdutolo di vista, sarebbe per il grande dolore disciolto in pioggia o perdutosi in vaganti vapori.    
+Ma, ecco il crepuscolo, ecco l’alba e la succedente aurora. Raggi splendidissimi spuntano da oriente; luce dorata si diffonde sulla terra; la rugiada brilla; i fiori aprono la corolla; gli uccelli salutano gioiosi il dì che sorge».<br>    
+Per leggere integralmente questa favola, <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Favoleggiatore.html">clicca qui</a>.</big></p><br><br><br>
+
+<p><big><big><span style="text-decoration: underline;">15 febbraio 2022</span></big></big></p><br><br>
+<p><big>Oggi desideriamo ricordare un celebre Vignolese del secolo scorso, negli ultimi due decenni non adeguatamente onorato nella sua città natale. Ci riferiamo a don <strong>CASIMIRO BETTELLI</strong> (1924-1998), sacerdote, insegnante, poeta, scrittore, saggista, giornalista e collezionista d’arte.<br> 
+Per saperne di più su questa importante figura, visita il suo <a href="https://sarascaglioni.github.io/Celebri-Vignolesi/Bettelli.html">Profilo</a>.<br><br>
+
+Nell'immagine sottostante, prima di copertina di <i>Per tutti la pietà</i> (1967), una delle raccolte di versi di don Bettelli. Fonte: google.com</big></p>
+<img src="img/celebri vignolesi/Bettelli/pietà.jpg" width="500" height="700"><br><br><br>	
+	
 <p><big><big><span style="text-decoration: underline;">09 febbraio 2022</span></big></big></p><br><br>
 <p><big><strong>FRANCESCO SELMI</strong> (1817-1881) si cimentò con impegno in diversi settori. Egli stese anche numerosi romanzi, racconti e favole, la maggior parte dei quali risultano tuttora inediti. Nel licenziare per la stampa alcuni dei suoi testi narrativi, egli preferì celarsi dietro pseudonimo: ad esempio, questo è il caso della raccolta <i>I primi racconti scritti da un Maestruccio di Scuola</i> (1847), uscita in seconda edizione corretta e accresciuta con il titolo di <i>Racconti morali scritti da un Maestruccio di Scuola per lettura dei giovanetti italiani</i> (1853), ma è pure il caso di <i>Il Favoleggiatore</i> (1857), raccolta di favole firmata «M. di S.»; inoltre, l’Autore pubblicò il romanzo <i>Battista Cannatelli</i> (1866) sotto il nome di «Italo De’ Vecchi».<br>
 Presentiamo qui la trascrizione della prima favola contenuta in <i>Il Favoleggiatore (dati completi di questo volumetto selmiano: Il Favoleggiatore ossia raccolta di favole in lingua volgare scelte, emendate e purgate non che opportunamente annotate</i> ad usum serenissimi saeculi XIX dal M. di S., Torino, Tip. di G.B. Paravia e Comp., 1857). Via via, con cadenza grosso modo bimestrale, pubblicheremo la trascrizione di tutte le restanti 43 favole dell’opera. Nel passaggio dal testo a stampa al testo trascritto, per quanto riguarda gli aspetti grafici, abbiamo sistematicamente cancellato il punto fermo dopo il titolo di ogni favola e normalizzato all’uso odierno gli accenti; le rare modifiche di altra natura sono state indicate caso per caso.<br><br>
