--- a/homepage.html
+++ b/homepage.html
@@ -44,7 +44,8 @@
 <i>La cultura è una continua, placida e fiduciosa comunione, oserei dire amicizia, coi grandi morti</i> […].<br>
 <strong>Ugo Ojetti</strong><br><br>
 
-
+<i>Fate che non possa essere distinto se non colui che con la persona, coll’esempio, co’ suoi lumi si è fatto conoscere uomo di merito: fate che l’uomo più probo, l’uomo più benefico, l’uomo più illuminato sieno quei che dalla pubblica opinione vengano soli distinti, ed avrete piantata la scuola della virtù</i>.<br>
+<strong>Pietro Verri</strong><br><br>
 
 <i>Le lodi degli Uomini illustri e preclari non meno si debbono reputare un tributo verso coloro, da’ quali venne l’uman genere decorato e beneficato, che un argomento di generosa emulazione istituito ad eccitare nei viventi per la ricordanza de’ trapassati quella virtù, che molto meglio per gli esempli si scuote, che per gl’insegnamenti. E se la virtù, qualunque ella sia, di qualunque età, di qualunque nazione, ha diritto di essere ammirata sempre, ed imitata; par nondimeno che ella prenda un maggior grado di forza e di energìa, quando più da vicino ne appartiene, sia per ereditaria ragion di famiglia, sia per pubblico titolo e comune di patria.</i><br>
 <strong>Agostino Paradisi <i>il Giovane</i></strong><br><br>
@@ -58,6 +59,10 @@ La storia del Municipio dovrebbe insegnarsi per primo, ma in armonia, non in gue
 
 [...] <i>le città vanno in rovina quando non sono in grado di discernere gli uomini che non valgono nulla da quelli valenti.</i><br>
 <strong>Diogene Laerzio</strong><br><br>
+  
+<i>La virtù vuole che siamo giusti, e non lo è colui che considera con occhio uguale le generose azioni e le vili; che mostra rispetto a chi ha potere, e trascura il merito disarmato. Non è virtuoso chi non sa distinguere o ardisce distinguere le anime nobili dalle abjette […].<br> 
+L’uomo dabbene, anche solo, cominci a onorare il merito, a non usare col vizio i riguardi medesimi che destina alla virtù, mostri la disapprovazione se non altro col silenzio, cessi l’uomo d’essere uno schiavo in somma; e se questo principio si dilata su varj de’ cittadini, ben tosto s’accorgeranno che essi sono gli arbitri della reputazione, che la cattiva reputazione essendo una pena, essi co’ loro voti riuniti possono castigare gli uomini nocivi. Da qui il sentimento delle proprie forze, l’argine al vizio, la spinta al bene.</i><br>
+<strong>Pietro Verri</strong><br><br>
 
 <i>Certo, è naturale che, nei centri piccoli e sconosciuti, non fioriscano le attività connesse con gli alti guadagni e il prestigio; ma la virtù, come un robusto sempreverde, mette radici dappertutto, purché trovi una natura generosa e un animo capace di sopportare la sofferenza. Allo stesso modo, non è corretto attribuire la responsabilità di un comportamento dissoluto e poco razionale al fatto di essere nati in una piccola città: nel caso, gli unici colpevoli siamo noi.</i><br>
 <strong>Plutarco di Cheronea</strong><br><br>
